tests/macros/float/auto_complete.stderr
error: option `auto_complete` does not exist for kind `float`
 --> $DIR/auto_complete.rs:3:9
  |
3 |         auto_complete: todo!()
  |         ^^^^^^^^^^^^^
