tests/macros/float/auto_complete.rs
fn main() {
    discourse::questions![Float {
        auto_complete: todo!()
    }];
}
